<resources>

    <string name="login_phone_hint">手机</string>
    <string name="login_password_hint">密码</string>
    <string name="sign_in">登录</string>
    <string name="terms_title">协议</string>
    <string name="free_trial">免费试用</string>

    <string name="phone_empty">手机号不能为空</string>
    <string name="phone_error">请输入11位手机号</string>
    <string name="phone_code_empty">验证码不能为空</string>
    <string name="illegal_password">请输入6&#8211;12位数字或中英文，不能是纯数字</string>
    <string name="error_email">请输入正确的邮箱</string>
    <string name="empty_email">请先输入邮箱</string>
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ._</string>


    <string name="code_frequent">验证码获取频繁，请稍后再试</string>
    <string name="code_login_error">手机号或密码错误</string>
    <string name="code_account_not_exit">账号不存在</string>
    <string name="code_error_verify">验证码错误</string>


    <string name="phone_pwd_login">密码登录</string>
    <string name="phone_code_login">验证码登录</string>

    <string name="verify_code_hint">验证码</string>
    <string name="get_verify_code">获取验证码</string>


    <string name="confirm_user_protocol">登录表示您同意小沐助教的《用户协议》</string>

    <string name="resend_time_format">%1$s s</string>
    <string name="resend">重发</string>

    <string name="copy">复制</string>

</resources>
