<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingLeft="31dp"
            android:paddingRight="31dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="31dp"
                android:src="@drawable/img_logo" />

            <com.moon.libbase.widget.ClearableEditText
                android:id="@+id/phoneView"
                style="@style/XmPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:textCursorDrawable="@null"
                android:hint="@string/login_phone_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:minHeight="43.0dip"
                android:singleLine="true"
                android:textColor="@color/xm_text_primary"
                android:textColorHint="@color/xm_text_hint"
                android:textSize="@dimen/xm_text_size_m" />

            <View
                style="@style/XmDivisionLine"
                android:layout_height="1.0dip" />

            <ViewSwitcher
                android:id="@+id/verifyTypeSwitcher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@anim/slide_in_from_left"
                android:outAnimation="@anim/slide_out_to_right">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/verifyCodeBlock"
                    android:name="com.moon.libaccount.ui.fragment.VerifyCodeFragment"
                    android:layout_width="match_parent"
                    android:layout_height="43.0dip" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.moon.libbase.widget.ClearableEditText
                        android:id="@+id/passwordView"
                        style="@style/XmPadding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:digits="@string/password_digits"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="20"
                        android:minHeight="43.0dip"
                        android:textCursorDrawable="@null"
                        android:textColor="@color/xm_text_primary"
                        android:textColorHint="@color/xm_text_hint"
                        android:textSize="@dimen/xm_text_size_m"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ViewSwitcher>

            <View
                style="@style/XmDivisionLine"
                android:layout_width="match_parent"
                android:layout_height="1.0dip" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24.0dip"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:theme="@style/CommonButtonTheme" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/switchVerityButton"
                    style="@style/XmPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorPrimary"
                    android:textSize="@dimen/xm_text_size_s" />

                <View
                    android:layout_width="0.0dip"
                    android:layout_height="1.0dip"
                    android:layout_weight="1.0" />

                <TextView
                    android:id="@+id/trialView"
                    style="@style/XmPadding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_trial"
                    android:textColor="?colorPrimary"
                    android:textSize="@dimen/xm_text_size_s" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="12.0dip"
            android:orientation="vertical">

            <TextView
                android:id="@+id/versionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/xm_text_hint"
                android:textSize="@dimen/xm_text_size_xs" />

            <TextView
                android:id="@+id/protocolView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/xm_text_hint"
                android:textSize="@dimen/xm_text_size_xs" />
        </LinearLayout>

    </FrameLayout>
</layout>